# NimbleGravityChallenge

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: electronics_dataset.xlsx
notebooks/: 00_run_pipeline.py  01_bronze_ingest.py  02_silver_standardize.py  03_silver_llm_extract.py  04_silver_llm_judge.py  05_silver_taxonomy.py  06_gold_aggregate.py
prompts/: extract_v1.yaml  judge_v1.yaml
resources/jobs/: pipeline.yml
src/nimble_pipeline/: __init__.py  config.py
src/nimble_pipeline/llm/: __init__.py  client.py  extract.py  judge.py
src/nimble_pipeline/parsers/: __init__.py  price.py  vendor.py  weight.py
tests/: test_price_parser.py  test_vendor_parser.py  test_weight_parser.py
