[project]
name = "nimble-pipeline"
version = "0.1.0"
description = "Medallion + LLM data engineering pipeline on Databricks Free Edition"
requires-python = ">=3.10"
authors = [{ name = "Alfredo Montero" }]
dependencies = [
    "pyyaml>=6.0",
    "rapidfuzz>=3.6.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
databricks = [
    "databricks-sdk>=0.20.0",
    "mlflow>=2.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
